--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -219,7 +219,7 @@
 "balance.info.detail.pledge.none.tip" = "0 UT/0 UT";
 
 /* Address Manage Page */
-"address.manage.page.title" = "My VITE Address";
+"address.manage.page.title" = "My %@ Address";
 "address.manage.default.address.cell.title" = "Default Address";
 "address.manage.address.header.title" = "Addresses";
 "address.manage.address.generate.button.title" = "Add Address";
