--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -232,7 +232,7 @@
 
 /* Send Page */
 "send.page.title" = "Send";
-"send.page.my.address.title" = "My VITE Address";
+"send.page.my.address.title" = "My %@ Address";
 "send.page.my.balance.title" = "Balance";
 "send.page.my.pledge.title" = "Benefited Stake";
 "send.page.my.quota.title" = "Spendable Quota/Quota Limit";
