--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -435,6 +435,19 @@
 "eth.page.gasFee.fast.title" = "快";
 "eth.page.gasFee.notice.title" = "消耗不完的Gas会全部退还";
 
+// eth transaction detail
+"eth.transaction.detail.page.title" = "详情";
+"eth.transaction.detail.failed" = "转账失败";
+"eth.transaction.detail.success" = "转账成功";
+"eth.transaction.detail.to.address" = "收款地址";
+"eth.transaction.detail.from.address" = "付款地址";
+"eth.transaction.detail.amount" = "金额";
+"eth.transaction.detail.gas" = "矿工费用";
+"eth.transaction.detail.hash" = "交易号";
+"eth.transaction.detail.block" = "区块";
+"eth.transaction.detail.note" = "备注";
+"eth.transaction.detail.go.button.title" = "到Etherscan查询更详细信息";
+
 //token
 "token.list.page.search.title" = "输入Token名称或合约地址";
 "token.list.page.section.vite.header" = "Vite网络";
