add market detail and Spot view

--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -987,6 +987,23 @@
 "market.operator" =  "Operators";
 "market.switch" =  "Exchange";
 
+// market detail
+"market.detail.page.segment.order.book.title" = "委托订单";
+"market.detail.page.segment.last.trades.title" = "最新成交";
+"market.detail.page.segment.token.info.title" = "代币";
+"market.detail.page.segment.operator.into.title" = "运营商";
+
+
+
+
+
+
+
+
+
+
+
+
 
 // DeFi
 "defi.home.page.title" =  "DeFi";
