--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -997,7 +997,13 @@
 "market.detail.page.info.low.title" = "低";
 "market.detail.page.info.vol.title" = "24H";
 
-
+"market.detail.page.kline.type.min1.title" = "1分钟";
+"market.detail.page.kline.type.min30.title" = "30分钟";
+"market.detail.page.kline.type.hour1.title" = "1小时";
+"market.detail.page.kline.type.hour6.title" = "6小时";
+"market.detail.page.kline.type.hour12.title" = "12小时";
+"market.detail.page.kline.type.day1.title" = "1天";
+"market.detail.page.kline.type.week1.title" = "1周";
 
 
 
