--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -1061,11 +1061,13 @@
 "spot.page.button.buy.title" = "买入";
 "spot.page.button.sell.title" = "卖出";
 "spot.page.button.limit.buy.title" = "限价委托";
-"spot.page.price.placeholder" = "买入价格";
-"spot.page.vol.placeholder" = "买入数量";
-"spot.page.available" = "可用";
-"spot.page.buyable" = "可买";
-"spot.page.sellable" = "可卖";
+"spot.page.price.buy.placeholder" = "买入价格";
+"spot.page.vol.buy.placeholder" = "买入数量";
+"spot.page.price.sell.placeholder" = "卖出价格";
+"spot.page.vol.sell.placeholder" = "卖出数量";
+"spot.page.available" = "可用: %@";
+"spot.page.buyable" = "可买: %@";
+"spot.page.sellable" = "可卖: %@";
 "spot.page.open.vip" = "开通 VIP";
 "spot.page.close.vip" = "取消 VIP";
 "spot.page.depth.price" = "价格";
