--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -534,6 +534,11 @@
 "confirm.transaction.page.vite.dex.deposit.confirm.button" = "Confirm";
 "confirm.transaction.page.vite.dex.withdraw.transfer.title" = "Withdraw to Wallet";
 "confirm.transaction.page.vite.dex.withdraw.confirm.button" = "Confirm";
+"confirm.transaction.page.vite.dex.buy.title" = "买入 %@";
+"confirm.transaction.page.vite.dex.buy.confirm.button" = "Confirm";
+"confirm.transaction.page.vite.dex.sell.title" = "卖出 %@";
+"confirm.transaction.page.vite.dex.sell.confirm.button" = "Confirm";
+
 // vite call contract
 "confirm.transaction.page.vite.call.contract.transfer.title" = "Payment";
 "confirm.transaction.page.vite.call.contract.confirm.button" = "Confirm";
@@ -1064,6 +1069,11 @@
 "spot.page.depth.vol" = "数量";
 "spot.page.current.order.title" = "当前委托";
 "spot.page.orders.button.title" = "历史委托";
+
+"spot.page.post.toast.price.empty" = "请输入价格";
+"spot.page.post.toast.price.zero" = "价格不能为0";
+"spot.page.post.toast.vol.empty" = "请输入数量";
+"spot.page.post.toast.vol.zero" = "数量不能为0";
 
 // DeFi
 "defi.home.page.title" =  "DeFi";
