--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -1086,7 +1086,8 @@
 "spot.page.open.vip" = "开通 VIP";
 "spot.page.close.vip" = "取消 VIP";
 "spot.page.open.vip.error.toast" = "交易所 VITE 余额不足，开通 VIP 需抵押 100,000 VITE";
-"spot.page.close.vip.error.toast" = "抵押不足30天，无法取回";
+"spot.page.close.vip.error.toast" = "无VIP抵押";
+"spot.page.close.vip.un.expire.error.toast" = "抵押不足30天，无法取回";
 "spot.page.depth.price" = "价格";
 "spot.page.depth.vol" = "数量";
 "spot.page.current.order.title" = "当前委托";
