--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -1006,7 +1006,7 @@
 
 "market.favourite" =  "Favorites";
 "market.searchhistory" =  "Search History";
-"market.title" =  "Exchange";
+"market.title" =  "行情";
 "market.about" =  "Get Started with ViteX";
 "market.name" =  "Name";
 "market.price" =  "Last Price";
