--- a/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/zh-Hans.lproj/Localizable.strings
@@ -1014,7 +1014,7 @@
 
 "market.favourite" =  "自选";
 "market.searchhistory" =  "搜索记录";
-"market.title" =  "交易所";
+"market.title" =  "行情";
 "market.about" =  "一分钟玩转Vitex";
 "market.name" =  "名称";
 "market.price" =  "最新价";
