--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -1082,8 +1082,9 @@
 "spot.page.price.sell.placeholder" = "Price";
 "spot.page.vol.sell.placeholder" = "Amount";
 "spot.page.available" = "Avail.: %@";
-"spot.page.buyable" = "Total: %@";
-"spot.page.sellable" = "Total: %@";
+"spot.page.buyable" = "Max Buy: %@";
+"spot.page.sellable" = "Max Sell: %@";
+"spot.page.total" = "Total: %@";
 "spot.page.open.vip" = "Become a VIP";
 "spot.page.close.vip" = "Cancel VIP";
 "spot.page.open.vip.error.toast" = "insufficient balance: 10,000 VITE staking is required to open VIP";
