--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -225,6 +225,29 @@
 "balance.info.detail.pledge.count.content" = "Spendable Quota/Quota Limit";
 "balance.info.detail.pledge.none.tip" = "0 UT/0 UT";
 
+"gateway.info.detail.page.title" = "Gateway Details";
+"gateway.info.detail.page.name" = "Gateway Name";
+"gateway.info.detail.page.webside" = "Gateway Official Site";
+"gateway.info.detail.page.brief" = "Gateway Introduction";
+"gateway.info.detail.page.email" = "Customer Service";
+"gateway.info.detail.page.agreement" = "Service Terms";
+"gateway.info.detail.page.link" = "Gateway Link";
+
+"token.info.detail.page.title" = "Token Details";
+"token.info.detail.page.name" = "Token Name";
+"token.info.detail.page.id" = "Token ID";
+"token.info.detail.page.brief" = "Introduction";
+"token.info.detail.page.total" = "Total Issuance";
+"token.info.detail.page.type" = "Token Type";
+"market.detail.page.token.info.type.value.native" = "Native";
+"market.detail.page.token.info.type.value.other" = "Cross-Chain";
+"token.info.detail.page.gateway" = "Cross-Chain gateway";
+"token.info.detail.page.webside" = "Website";
+"token.info.detail.page.paper" = "WhitePaper";
+"token.info.detail.page.browser" = "Explorer";
+"token.info.detail.page.github" = "Github";
+"token.info.detail.page.social" = "Social Media";
+
 /* Address Manage Page */
 "address.manage.page.title" = "My %@ Address";
 "address.manage.default.address.cell.title" = "Default Address";
