add vite tx detail page

--- a/ViteBusiness/Assets/en.lproj/Localizable.strings
+++ b/ViteBusiness/Assets/en.lproj/Localizable.strings
@@ -211,6 +211,19 @@
 "transaction.list.transaction.type.name.transfer" = "Transfer";
 "transaction.list.transaction.netErrorAndShowAccount" = "Something went wrong with network, click here to check account details";
 
+/* Transaction Detail */
+"vite.transaction.detail.page.state.success" = "转账成功";
+"vite.transaction.detail.page.state.call.success" = "合约调用成功";
+"vite.transaction.detail.page.state.call.failed" = "合约调用失败";
+"vite.transaction.detail.page.state.call.wait" = "等待合约执行";
+"vite.transaction.detail.page.type.title" = "交易类型";
+"vite.transaction.detail.page.type.send" = "请求";
+"vite.transaction.detail.page.type.receive" = "响应";
+"vite.transaction.detail.page.hash.title" = "交易 hash";
+"vite.transaction.detail.page.height.title" = "区块高度";
+"vite.transaction.detail.page.note.title" = "备注";
+"vite.transaction.detail.page.link.button.title" = "到 Vite 浏览器查询更详细信息";
+
 /* BalanceInfo */
 "balance.info.detail.balance.title" = "Balance";
 "balance.info.detail.unconfirmed.title" = "Unreceived";
